--- a/FeynHelpersBookDev/Extra/FeynHelpers.html
+++ b/FeynHelpersBookDev/Extra/FeynHelpers.html
@@ -27,6 +27,22 @@
 <ul>
 <li><a href="Cite.html">How to cite this package and the related tools</a></li>
 <li><a href="Install.html">Installation instructions</a></li>
+<li><a href="TensorReductionWithFermat.html">Tensor reduction with Fermat</a></li>
+</ul>
+<h2 id="generic-functions">Generic functions</h2>
+<ul>
+<li><a href="../FeynHelpersHowToCite.html">FeynHelpersHowToCite</a> - references to be cited when using FeynHelpers</li>
+<li><a href="../$FeynHelpersDirectory.html">$FeynHelpersDirectory</a>, <a href="../$FeynHelpersLoadInterfaces.html">$FeynHelpersLoadInterfaces</a>, <a href="../$FeynHelpersVersion.html">$FeynHelpersVersion</a> - global variables needed for the proper functioning of FeynHelpers</li>
+</ul>
+<h2 id="fermat-interface">Fermat interface</h2>
+<ul>
+<li><a href="../FerImportArrayAsSparseMatrix.html">FerImportArrayAsSparseMatrix</a> - converts Fermat arrays into Mathematica sparse arrays</li>
+<li><a href="../FerMatrixToFermatArray.html">FerMatrixToFermatArray</a> - converts matrices to Fermat arrays</li>
+<li><a href="../FerCommand.html">FerCommand</a> - templates for selected Fermat instruction</li>
+<li><a href="../FerRunScript.html">FerRunScript</a> - runs Fermat scripts</li>
+<li><a href="../FerRowReduce.html">FerRowReduce</a> - Fermat version of <code>RowReduce</code></li>
+<li><a href="../FerSolve.html">FerSolve</a> - Fermat version of <code>Solve</code></li>
+<li><a href="../FerInputFile.html">FerInputFile</a>, <a href="../FerOutputFile.html">FerOutputFile</a>, <a href="../FerPath.html">FerPath</a>, <a href="../FerScriptFile.html">FerScriptFile</a> - options of functions related to the Fermat interface</li>
 </ul>
 <h2 id="package-x-interface">Package-X interface</h2>
 <ul>
@@ -57,6 +73,7 @@
 <li><a href="../LToolsUnLoadLibrary.html">LToolsUnLoadLibrary</a> - unloads the LoopTools library</li>
 <li><a href="../LToolsExpandInEpsilon.html">LToolsExpandInEpsilon</a>, <a href="../LToolsFullResult.html">LToolsFullResult</a>, <a href="../LToolsImplicitPrefactor.html">LToolsImplicitPrefactor</a>, <a href="../LToolsSetLambda.html">LToolsSetLambda</a>, <a href="../LToolsSetMudim.html">LToolsSetMudim</a>, <a href="../LToolsPath.html">LToolsPath</a> - options of functions related to the LoopTools interface</li>
 <li><a href="../LToolsA0.html">LToolsA0</a>, <a href="../LToolsA00.html">LToolsA00</a>, <a href="../LToolsA0i.html">LToolsA0i</a>, <a href="../LToolsB0.html">LToolsB0</a>, <a href="../LToolsB00.html">LToolsB00</a>, <a href="../LToolsB0i.html">LToolsB0i</a>, <a href="../LToolsB1.html">LToolsB1</a>, <a href="../LToolsB001.html">LToolsB001</a>, <a href="../LToolsB11.html">LToolsB11</a>, <a href="../LToolsB111.html">LToolsB111</a>, <a href="../LToolsC0.html">LToolsC0</a>, <a href="../LToolsC0i.html">LToolsC0i</a>, <a href="../LToolsClearCache.html">LToolsClearCache</a>, <a href="../LToolsD0.html">LToolsD0</a>, <a href="../LToolsD0i.html">LToolsD0i</a>, <a href="../LToolsDB0.html">LToolsDB0</a>, <a href="../LToolsDB00.html">LToolsDB00</a>, <a href="../LToolsDB1.html">LToolsDB1</a>, <a href="../LToolsDB11.html">LToolsDB11</a>, <a href="../LToolsDebugA.html">LToolsDebugA</a>, <a href="../LToolsDebugAll.html">LToolsDebugAll</a>, <a href="../LToolsDebugB.html">LToolsDebugB</a>, <a href="../LToolsDebugC.html">LToolsDebugC</a>, <a href="../LToolsDebugD.html">LToolsDebugD</a>, <a href="../LToolsDebugE.html">LToolsDebugE</a>, <a href="../LToolsDR1eps.html">LToolsDR1eps</a>, <a href="../LToolsDRResult.html">LToolsDRResult</a>, <a href="../LToolsE0.html">LToolsE0</a>, <a href="../LToolsE0i.html">LToolsE0i</a>, <a href="../LToolsGetCmpBits.html">LToolsGetCmpBits</a>, <a href="../LToolsGetDebugKey.html">LToolsGetDebugKey</a>, <a href="../LToolsGetDelta.html">LToolsGetDelta</a>, <a href="../LToolsGetDiffEps.html">LToolsGetDiffEps</a>, <a href="../LToolsGetErrDigits.html">LToolsGetErrDigits</a>, <a href="../LToolsGetLambda.html">LToolsGetLambda</a>, <a href="../LToolsGetMaxDev.html">LToolsGetMaxDev</a>, <a href="../LToolsGetMinMass.html">LToolsGetMinMass</a>, <a href="../LToolsGetMudim.html">LToolsGetMudim</a>, <a href="../LToolsGetUVDiv.html">LToolsGetUVDiv</a>, <a href="../LToolsGetVersionKey.html">LToolsGetVersionKey</a>, <a href="../LToolsGetWarnDigits.html">LToolsGetWarnDigits</a>, <a href="../LToolsGetZeroEps.html">LToolsGetZeroEps</a>, <a href="../LToolsKeyA0.html">LToolsKeyA0</a>, <a href="../LToolsKeyAll.html">LToolsKeyAll</a>, <a href="../LToolsKeyBget.html">LToolsKeyBget</a>, <a href="../LToolsKeyC0.html">LToolsKeyC0</a>, <a href="../LToolsKeyCEget.html">LToolsKeyCEget</a>, <a href="../LToolsKeyD0.html">LToolsKeyD0</a>, <a href="../LToolsKeyE0.html">LToolsKeyE0</a>, <a href="../LToolsKeyEget.html">LToolsKeyEget</a>, <a href="../LToolsLi2.html">LToolsLi2</a>, <a href="../LToolsLi2omx.html">LToolsLi2omx</a>, <a href="../LToolsMarkCache.html">LToolsMarkCache</a>, <a href="../LToolsPaVe.html">LToolsPaVe</a>, <a href="../LToolsRestoreCache.html">LToolsRestoreCache</a>, <a href="../LToolsSetCmpBits.html">LToolsSetCmpBits</a>, <a href="../LToolsSetDebugKey.html">LToolsSetDebugKey</a>, <a href="../LToolsSetDebugRange.html">LToolsSetDebugRange</a>, <a href="../LToolsSetDelta.html">LToolsSetDelta</a>, <a href="../LToolsSetDiffEps.html">LToolsSetDiffEps</a>, <a href="../LToolsSetErrDigits.html">LToolsSetErrDigits</a>, <a href="../LToolsSetMaxDev.html">LToolsSetMaxDev</a>, <a href="../LToolsSetMinMass.html">LToolsSetMinMass</a>, <a href="../LToolsSetUVDiv.html">LToolsSetUVDiv</a>, <a href="../LToolsSetVersionKey.html">LToolsSetVersionKey</a>, <a href="../LToolsSetWarnDigits.html">LToolsSetWarnDigits</a> - placeholders for certain LoopTools symbols</li>
+<li><a href="../$LTools.html">$LTools</a> - global variables needed for the proper functioning of the interface</li>
 </ul>
 <h2 id="pysecdec-interface">pySecDec interface</h2>
 <ul>
@@ -74,6 +91,7 @@
 <li><a href="../QGCreateAmp.html">QGCreateAmp</a> - generates Feynman amplitudes and diagrams</li>
 <li><a href="../QGLoadInsertions.html">QGLoadInsertions</a> - loads sets of Feynman rules</li>
 <li><a href="../QGPrepareDiagramsTeX.html">QGPrepareDiagramsTeX</a> - prepares TeX form of Feynman diagrams</li>
+<li><a href="../QGPolarization.html">QGPolarization</a> - placeholder for the polarization of a field</li>
 <li><a href="../QGPropagator.html">QGPropagator</a> - placeholder for the propagator of a field</li>
 <li><a href="../QGTruncatedPolarization.html">QGTruncatedPolarization</a> - placeholder for the truncated external state of a field</li>
 <li><a href="../QGVertex.html">QGVertex</a> - placeholder for the interaction vertex of some fields</li>
