--- a/FeynCalcBookDev/Extra/Indices.html
+++ b/FeynCalcBookDev/Extra/Indices.html
@@ -27,10 +27,10 @@
 <p><a href="FeynCalc.html">Overview</a>.</p>
 <p>Here we list a set of rules that allows to reconstruct the positions of indices (upstairs or downstairs) appearing in FeynCalc expressions</p>
 <ul>
-<li><p>Every expression must satisfy Einsteins’s summation convention, both for Lorentz and Cartesian indices. Single terms containing more than two identical Lorentz or Cartesian indices are illegal and will lead to inconsistent results.</p></li>
-<li><p>In a contraction of two Lorentz indices it is understood that one of them is upstairs and the other is downstairs.</p></li>
-<li><p>In a contraction of two Cartesian indices, both indices are understood to be upper indices.</p></li>
-<li><p>A free Lorentz or Cartesian index is always understood to be an upper index</p></li>
+<li>Every expression must satisfy Einsteins’s summation convention, both for Lorentz and Cartesian indices. Single terms containing more than two identical Lorentz or Cartesian indices are illegal and will lead to inconsistent results.</li>
+<li>In a contraction of two Lorentz indices it is understood that one of them is upstairs and the other is downstairs.</li>
+<li>In a contraction of two Cartesian indices, both indices are understood to be upper indices.</li>
+<li>A free Lorentz or Cartesian index is always understood to be an upper index</li>
 </ul>
 </body>
 </html>
