--- a/FeynCalcBookDev/FreeIndexFreeQ.html
+++ b/FeynCalcBookDev/FreeIndexFreeQ.html
@@ -102,7 +102,7 @@
 <h1 class="title">FeynCalc manual (development version)</h1>
 </header>
 <h2 id="freeindexfreeq">FreeIndexFreeQ</h2>
-<p><code>FreeIndexFreeQ[exp, {head1, head2, ...}]</code> returns <code>True</code> if the expression contains uncontracted indices with heads <code>head1</code>, <code>head2, ... and</code>False` otherwise.</p>
+<p><code>FreeIndexFreeQ[exp, {head1, head2, ...}]</code> returns <code>True</code> if the expression contains uncontracted indices with heads <code>head1</code>, <code>head2</code>, … and <code>False</code> otherwise.</p>
 <p>As always in FeynCalc, Einstein summation convention is implicitly assumed. The function is optimized for large expressions, i.e. it is not so good as a criterion in e.g. <code>Select</code>.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a href="FCRenameDummyIndices.html">FCRenameDummyIndices</a>, <a href="Contract.html">Contract</a>, <a href="DummyIndexFreeQ.html">DummyIndexFreeQ</a>.</p>
