--- a/FeynCalcBookDev/LeftRightPartialD2.html
+++ b/FeynCalcBookDev/LeftRightPartialD2.html
@@ -103,7 +103,7 @@
 </header>
 <h2 id="leftrightpartiald2">LeftRightPartialD2</h2>
 <p><code>LeftRightPartialD2[mu]</code> denotes <span class="math inline">\overleftrightarrow{\partial }_{\mu }</span>, acting to the left and right.</p>
-<p><code>ExplicitPartialD[LeftRightPartialD2[mu]] gives</code>(RightPartialD[mu] + LeftPartialD[mu])`.</p>
+<p><code>ExplicitPartialD[LeftRightPartialD2[mu]]</code> gives <code>(RightPartialD[mu] + LeftPartialD[mu])</code>.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a href="ExplicitPartialD.html">ExplicitPartialD</a>, <a href="ExpandPartialD.html">ExpandPartialD</a>, <a href="FCPartialD.html">FCPartialD</a>, <a href="LeftPartialD.html">LeftPartialD</a>, <a href="RightPartialD.html">RightPartialD</a>.</p>
 <h3 id="examples">Examples</h3>
