--- a/FeynCalcBookDev/PowerSimplify.html
+++ b/FeynCalcBookDev/PowerSimplify.html
@@ -103,7 +103,7 @@
 </header>
 <h2 id="powersimplify">PowerSimplify</h2>
 <p><code>PowerSimplify[exp]</code> simplifies <code>(-x)^a</code> to <code>(-1)^a x^a</code> and <code>(y-x)^n</code> to <code>(-1)^n (x-y)^n</code> thus assuming that the exponent is an integer (even if it is symbolic).</p>
-<p>Furthermore, <code>(-1)^(a+n)</code> and <code>I^(a+n)</code> are expanded and <code>(I)^(2 m) -&gt; (-1)^m and (-1)^(n_Integer?EvenQ m) -&gt; 1</code> and <code>(-1)^(n_Integer?OddQ m) -&gt; (-1)^m</code> for <code>n</code> even and odd respectively and (-1)^(-n) -&gt; (-1)^n and Exp[I m Pi] -&gt; (-1)^m.</p>
+<p>Furthermore, <code>(-1)^(a+n)</code> and <code>I^(a+n)</code> are expanded and <code>(I)^(2 m) -&gt; (-1)^m and (-1)^(n_Integer?EvenQ m) -&gt; 1</code> and <code>(-1)^(n_Integer?OddQ m) -&gt; (-1)^m</code> for <code>n</code> even and odd respectively and <code>(-1)^(-n) -&gt; (-1)^n</code> and <code>Exp[I m Pi] -&gt; (-1)^m</code>.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a href="DataType.html">DataType</a>, <a href="OPEm.html">OPEm</a>.</p>
 <h3 id="examples">Examples</h3>
