--- a/FeynCalcBookDev/FAModelsDirectory.html
+++ b/FeynCalcBookDev/FAModelsDirectory.html
@@ -23,7 +23,7 @@
 <h1 class="title">FeynCalc manual (development version)</h1>
 </header>
 <h2 id="famodelsdirectory">FAModelsDirectory</h2>
-<p><code>FAModelsDirectory</code> is an option of <code>FAPatch</code>. It points to the directory that contains FeynArts models. The default value is <code>"Models"' inside</code>$FeynArtsDirectory’.</p>
+<p><code>FAModelsDirectory</code> is an option of <code>FAPatch</code>. It points to the directory that contains FeynArts models. The default value is <code>"Models"</code> inside <code>$FeynArtsDirectory</code>.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a href="FAPatch.html">FAPatch</a>.</p>
 <h3 id="examples">Examples</h3>
