--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -217,7 +217,7 @@
 <li><a href="../LorentzToCartesian.html">LorentzToCartesian</a> - rewrties Lorentz tensors in terms of Cartesian tensors</li>
 <li><a href="../MomentumCombine.html">MomentumCombine</a> - inverse operation to <a href="../MomentumExpand.html">MomentumExpand</a> and <a href="../ExpandScalarProduct.html">ExpandScalarProduct</a></li>
 <li><a href="../MomentumExpand.html">MomentumExpand</a> - expands <a href="../Momentum.html">Momentum</a></li>
-<li><a href="../PairContract.html">PairContract</a>, <a href="../PairContract3.html">PairContract3</a>, - like <a href="../Pair.html">Pair</a> but with local contraction properties</li>
+<li><a href="../PairContract.html">PairContract</a>, <a href="../PairContract2.html">PairContract2</a>, <a href="../PairContract3.html">PairContract3</a>, - like <a href="../Pair.html">Pair</a> but with local contraction properties</li>
 <li><a href="../Schouten.html">Schouten</a> - applies <a href="../Schouten.html">Schouten</a>’s identity (random guess)</li>
 <li><a href="../SetMandelstam.html">SetMandelstam</a> - defines the Mandelstam variables</li>
 <li><a href="../SetTemporalComponent.html">SetTemporalComponent</a> - assings values to temporal components of Lorentz vectors</li>
@@ -398,6 +398,8 @@
 <ul>
 <li><a href="../FCGVToSymbol.html">FCGVToSymbol</a> - converts <a href="../FCGV.html">FCGV</a>s to symbols</li>
 <li><a href="../FCLoopGLIToSymbol.html">FCLoopGLIToSymbol</a> - converts <a href="../GLI.html">GLI</a>s to symbols</li>
+<li><a href="../FCToTeXReorder.html">FCToTeXReorder</a> - custom ordering of terms in expressions</li>
+<li><a href="../FCToTeXPreviewTermOrder.html">FCToTeXPreviewTermOrder</a> - previews the output of <a href="../FCToTeXReorder.html">FCToTeXReorder</a></li>
 <li><a href="../FeynCalc2FORM.html">FeynCalc2FORM</a> - displays expression in FORM syntax</li>
 <li><a href="../FeynCalcToLaTeX.html">FeynCalcToLaTeX</a> - generates LaTeX</li>
 <li><a href="../FORM2FeynCalc.html">FORM2FeynCalc</a> - translates the FORM expression in file into FeynCalc notation</li>
