--- a/FeynCalcBookDev/Extra/FeynArtsSigns.html
+++ b/FeynCalcBookDev/Extra/FeynArtsSigns.html
@@ -77,7 +77,7 @@
     code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
   </style>
   <link rel="stylesheet" href="../css/feyncalc.css" />
-  <script src="js/katex.min.js"></script>
+  <script src="../js/katex.min.js"></script>
   <script>document.addEventListener("DOMContentLoaded", function () {
    var mathElements = document.getElementsByClassName("math");
    var macros = [];
@@ -92,7 +92,7 @@
      });
   }}});
   </script>
-  <link rel="stylesheet" href="js/katex.min.css" />
+  <link rel="stylesheet" href="../js/katex.min.css" />
 
 </head>
 <body>
