--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -14,7 +14,7 @@
     ul.task-list{list-style: none;}
   </style>
   <link rel="stylesheet" href="../css/feyncalc.css" />
-  <script src="js/katex.min.js"></script>
+  <script src="../js/katex.min.js"></script>
   <script>document.addEventListener("DOMContentLoaded", function () {
    var mathElements = document.getElementsByClassName("math");
    var macros = [];
@@ -29,7 +29,7 @@
      });
   }}});
   </script>
-  <link rel="stylesheet" href="js/katex.min.css" />
+  <link rel="stylesheet" href="../js/katex.min.css" />
 
 </head>
 <body>
