--- a/FeynCalcBookDev/Extra/DiracAlgebra.html
+++ b/FeynCalcBookDev/Extra/DiracAlgebra.html
@@ -98,6 +98,7 @@ P_{R/L} (\bar{\gamma} \cdot \bar{p} - m)  + P_{L/R} \bar{\gamma} \cdot \hat{p}  
 <p>Notice that package <code>TRACER</code> resolves the redundancy of having <span class="math inline">\gamma^\mu = \bar{\gamma}^\mu + \hat{\gamma}^\mu</span> by eliminating <span class="math inline">\bar{\gamma}^\mu</span> and offering a function that reintroduces it at the end of the calculation.</p>
 <p>Contractions of Dirac matrices and vectors with the metric read</p>
 <p><span class="math display">
+\begin{align}
 \begin{split}
 g^{\mu \nu} \gamma_\nu &amp;= \gamma^\mu, \\
 \bar{g}^{\mu \nu} \bar{\gamma}_\nu &amp;= g^{\mu \nu} \bar{\gamma}_\nu = \bar{g}^{\mu \nu} \gamma_\nu = \bar{\gamma}^\mu, \\
@@ -110,9 +111,11 @@ g^{\mu \nu} p_\nu &amp;= p^\mu, \\
 \hat{g}^{\mu \nu} \hat{p}_\nu &amp;= g^{\mu \nu} \hat{p}_\nu = \hat{g}^{\mu \nu} p_\nu = \hat{p}^\mu, \\
 \bar{g}^{\mu \nu} \hat{p}_\nu &amp;= \hat{g}^{\mu \nu} \bar{p}_\nu = 0.
 \end{split}
+\end{align}
 </span></p>
 <p>Contractions of the metric with itself</p>
 <p><span class="math display">
+\begin{align}
 \begin{split}
 g^{\mu \nu} g_{\nu \rho} &amp; = g^\mu_\rho \\
 \bar{g}^{\mu \nu} \bar{g}_{\nu \rho} &amp; =g^{\mu \nu} \bar{g}_{\nu \rho} = \bar{g}^{\mu \nu} g_{\nu \rho} = \bar{g}^\mu_\rho \\
@@ -125,9 +128,11 @@ g^{\mu \nu} g_{\mu \nu} &amp; = d, \\
 \hat{g}^{\mu \nu} \hat{g}_{\mu \nu} &amp; = g^{\mu \nu} \hat{g}_{\mu \nu} = \hat{g}^{\mu \nu} g_{\mu \nu} = d-4, \\
 \bar{g}^{\mu \nu} \hat{g}_{\mu \nu} &amp;= \hat{g}^{\mu \nu} \bar{g}_{\mu \nu}  = 0.
 \end{split}
+\end{align}
 </span></p>
 <p>Contractions of Dirac matrices and vectors with themselves</p>
 <p><span class="math display">
+\begin{align}
 \begin{split}
 \gamma^\mu \gamma_\mu  &amp;=  D, \\
 \bar{\gamma}^\mu \bar{\gamma}_\mu  &amp;= \gamma^\mu \bar{\gamma}_\mu  = \bar{\gamma}^\mu \gamma_\mu = 4, \\
@@ -140,15 +145,18 @@ p^\mu p_\mu &amp;= p^2, \\
 \hat{p}^\mu \hat{p}_\mu &amp;= \hat{p}^\mu p_\mu = p^\mu \hat{p}_\mu =  \hat{p}^2, \\
 \bar{p}^\mu \hat{p}_\mu &amp;= \hat{p}^\mu \bar{p}_\mu = 0.
 \end{split}
+\end{align}
 </span></p>
 <p>Dirac slashes</p>
 <p><span class="math display">
+\begin{align}
 \begin{split}
 \gamma^\mu p_\mu &amp;= \gamma \cdot p, \\
 \bar{\gamma}^\mu \bar{p}_\mu &amp;= \bar{\gamma}^\mu p_\mu = \gamma^\mu \bar{p}_\mu = \bar{\gamma} \cdot \bar{p}, \\
 \hat{\gamma}^\mu p_\mu &amp;= \hat{\gamma}^\mu p_\mu = \gamma^\mu \hat{p}_\mu = \hat{\gamma} \cdot \hat{p}, \\
 \bar{\gamma}^\mu \hat{p}_\mu &amp;= \hat{\gamma}^\mu \bar{p}_\mu = 0. \\
 \end{split}
+\end{align}
 </span></p>
 <p>Index pairs with one, two, three, four or five free indices</p>
 <p><span class="math display">
