--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -42,6 +42,7 @@
 <li><a href="Indices.html">Upper and lower indices</a></li>
 <li><a href="MasterIntegrals.html">Master integrals</a></li>
 <li><a href="FeynArtsSigns.html">FeynArts sign conventions</a></li>
+<li><a href="DiracAlgebra.html">Dirac algebra</a></li>
 </ul>
 <h2 id="basic-objects">Basic objects</h2>
 <ul>
@@ -334,7 +335,7 @@
 <li><a href="../FCLoopFromGLI.html">FCLoopFromGLI</a> - converts <a href="../GLI.html">GLI</a>s into explicit integrals with <a href="../FeynAmpDenominator.html">FeynAmpDenominator</a>s</li>
 <li><a href="../FCLoopGetEtaSigns.html">FCLoopGetEtaSigns</a> - extracts the signs of <span class="math inline">i \eta</span> from all propagators</li>
 <li><a href="../FCLoopGLIDifferentiate.html">FCLoopGLIDifferentiate</a> - differentiates <a href="../GLI.html">GLI</a>s with respect to a scalar variable.</li>
-<li><a href="../FCLoopGLIExpand.html">FCLoopGLIExpand</a> - series expansion of expressions with <a href="../GLI.html">GLI</a>s with respect to a scalar variable</li>
+<li><a href="../FCLoopAddScalingParameter.html">FCLoopAddScalingParameter</a>, <a href="../FCLoopGLIExpand.html">FCLoopGLIExpand</a> - series expansion of expressions with <a href="../GLI.html">GLI</a>s with respect to a scalar variable</li>
 <li><a href="../FCLoopIBPReducableQ.html">FCLoopIBPReducableQ</a> - checks if the integral contains propagators raised to integer powers</li>
 <li><a href="../FCLoopIntegralToPropagators.html">FCLoopIntegralToPropagators</a> - auxiliary function that converts a loop integral into a list of propagators</li>
 <li><a href="../FCLoopIsolate.html">FCLoopIsolate</a> - wraps loop integrals into specified heads</li>
@@ -431,6 +432,7 @@
 <li><a href="../QuarkGluonVertex.html">QuarkGluonVertex</a>, <a href="../QGV.html">QGV</a> - quark gluon vertex</li>
 <li><a href="../QuarkPropagator.html">QuarkPropagator</a>, <a href="../QP.html">QP</a> - quark propagator</li>
 <li><a href="../ScalarGluonVertex.html">ScalarGluonVertex</a> - scalar-scalar-gluon vertex</li>
+<li><a href="../ShiftPartialD.html">ShiftPartialD</a> - shifts partial derivatives acting on <a href="../QuantumField.html">QuantumField</a>s using IBPs</li>
 <li><a href="../SquareAmplitude.html">SquareAmplitude</a> - writes <span class="math inline">|\mathcal{M}|^2</span> as a list of amplitude products</li>
 <li><a href="../SMP.html">SMP</a> - symbols for various SM paremeters</li>
 <li><a href="../SMVertex.html">SMVertex</a> - some SM vertices</li>
